# aextract

./: .gitignore  README.md  pyproject.toml  requirements.txt
aextract/: config.py  main.py  utils.py
aextract/process/: ibm1.py
jobs/: setup_all.sh  setup_env.sh  train.sh  update_env.sh
notebooks/: data.ipynb
scripts/: download_data.sh  install.sh  process_data.sh  setup_all.sh  setup_data.sh
scripts/data/: aaec.sh  ibm1.sh  ibm2.sh  process.sh  sciarg.sh  ukp.sh
